--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,6 @@
     "require": {
         "intervention/image": "^2.7",
         "phpmailer/phpmailer": "^6.6",
-        "vlucas/phpdotenv": "^5.4",
-        "ext-imagick": "*"
+        "vlucas/phpdotenv": "^5.4"
     }
 }
